# researchtopodcast

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: gen_ai_history.md
frontend/: index.html  postcss.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
researchtopodcast/: __init__.py  __main__.py  settings.py
researchtopodcast/api/: __init__.py  dependencies.py  main.py
researchtopodcast/api/routers/: __init__.py  podcast.py
researchtopodcast/cli/: __init__.py  cli.py
researchtopodcast/llm_client/: __init__.py  base.py  models.py  openai.py  openrouter.py
researchtopodcast/script_engine/: __init__.py  formatter.py  persona.py  planner.py
researchtopodcast/script_engine/templates/: multi_agent.j2  single_llm.j2  solo.j2  title.j2
researchtopodcast/speech/: __init__.py  base.py  google.py
researchtopodcast/utils/: __init__.py  document_loader.py
specs/: base-app.md
tests/: __init__.py  conftest.py
tests/e2e/: test_episode.py
tests/integration/: test_api_bootstrap.py
tests/unit/: test_api.py  test_bootstrap.py  test_cli.py  test_llm_client.py  test_script_engine.py  test_settings.py  test_speech.py
