[project]
name = "researchtopodcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.0",
    "pydub>=0.25.0",
    "google-cloud-texttospeech>=2.16.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
research2podcast = "researchtopodcast.cli.cli:app"

[project.optional-dependencies]
dev = [
    "aider-install>=0.2.0",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "black",
  "mypy",
  "pre-commit",
  "types-requests",
]
