[project]
name = "researchtopodcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.1.1",
]

[project.optional-dependencies]
dev = [
    "aider-install>=0.2.0",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "black",
  "mypy",
  "pre-commit",
  "types-requests",
]
